Fix T47212: incorrect luma coefficients for Luminance Key node.

Differential Revision: https://developer.blender.org/D2982